--- a/geoportal_1/src/main/webapp/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/devincludes.jspf
@@ -1,44 +1,63 @@
 <!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
 <link rel="stylesheet" href="resources/css/google.css" type="text/css" />
-<link rel="stylesheet" href="resources/css/jquery-ui.custom.css" type="text/css" />
+<link rel="stylesheet" href="resources/css/jquery-ui-ogpTheme.custom.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/structure.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/mapDiv.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/dataTable.css" type="text/css" />
 <link rel="stylesheet" type="text/css" media="print" href="resources/css/print.css" />
-<script type="text/javascript" src="//maps.google.com/maps/api/js?v=3.10&amp;sensor=false"></script>
-<script type="text/javascript" src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<!--  <script type="text/javascript" src="resources/javascript/require.js"></script>-->
+<script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
 <script src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+
 <!-- <script type="text/javascript" src="resources/javascript/DataTables/media/js/jquery.dataTables.min.js"></script>-->
+  
 <script type="text/javascript" src="resources/javascript/dataTables.scroller.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script type="text/javascript" src="resources/javascript/jquery.scrollTo-min.js"></script>
-<script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>
+<!--  <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>-->
+
+<script type="text/javascript" src="//maps.google.com/maps/api/js?v=3.10&sensor=false"></script>
+<script type="text/javascript" src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
+
 <script type="text/javascript" src="resources/javascript/panZoom.js"></script>
+
 <!-- ogp javascript library files -->
+ 
 <script type="text/javascript" src="resources/javascript/lib/errorObject.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/analytics.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/utility.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/template.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/templates/template.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/institution.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/tableConfig.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/tableLayerSettings.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/tableSortSettings.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/tableSettings.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/previewedLayers.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/layerSettings.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/appSettings.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/commonControls.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/resultItem.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/mapModel.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/tableConfig.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/tableLayerSettings.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/tableSortSettings.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/previewedLayers.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/cartCollection.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/login.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/appSettings.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/queryModel.js"></script>
+
+<script type="text/javascript" src="resources/javascript/lib/views/selectBoxes.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/views/miscViews.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/views/search.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/views/previewControls.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/views/previewedLayersPanel.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/layerTable.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/solr.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/search.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/searchResultsTable.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/cartTable.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/download.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/login.js"></script>
+
 <script type="text/javascript" src="resources/javascript/lib/geoCommonsExport.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/mapDiv.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/userInterface.js"></script>
+
 <!-- main ogp script -->
 <script type="text/javascript" src="resources/javascript/lib/main.js"></script>
 
