--- a/geoportal_1/src/main/webapp/jspf/results.jspf
+++ b/geoportal_1/src/main/webapp/jspf/results.jspf
@@ -1,17 +1,17 @@
-<div id="searchResults">
- 	<div id="resultsSubHeader" class="sub_header tableHeader"> 
+
+ 	<div id="resultsTableHeader" class="tableHeader"> 
     	<div id="sortDropdown">
     		Sort Results
       	</div>
     	<div id="columnDropdown">
     		Columns
 		</div>	
-    	<div class="mapClearButton styledButtonSmall" title="Clear all layers from the map" >
+    	<div id="mapClearButton" title="Clear all layers from the map" >
     		Clear Views
 		</div>			
  	</div>
+<div id="searchResults">
  	<div id="searchResultsMessage" class="tableFooter"></div>
- 	<!--<div id="searchResultsNavigation"></div>-->
 </div>
 
 
