--- a/geoportal_1/src/main/webapp/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/devincludes.jspf
@@ -39,6 +39,7 @@
 <script type="text/javascript" src="resources/javascript/lib/models/tableSortSettings.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/models/previewedLayers.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/models/cartCollection.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/models/downloadQueue.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/login.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/models/appSettings.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/models/queryModel.js"></script>
@@ -52,7 +53,7 @@
 <script type="text/javascript" src="resources/javascript/lib/solr.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/searchResultsTable.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/cartTable.js"></script>
-<script type="text/javascript" src="resources/javascript/lib/download.js"></script>
+<!--  <script type="text/javascript" src="resources/javascript/lib/download.js"></script>-->
 
 <script type="text/javascript" src="resources/javascript/lib/geoCommonsExport.js"></script>
 <script type="text/javascript" src="resources/javascript/lib/mapDiv.js"></script>
