added a controller for iframe login, fixed geocommons export, adding/removing columns from the preview panel, exploration of wfs download using GeoTools (GML to shapefile).

--- a/geoportal_1/src/main/webapp/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/devincludes.jspf
@@ -27,6 +27,7 @@
 	src="resources/javascript/spinners/spinners/spinners.min.js"></script>
 
 <!--  <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>-->
+<script type="text/javascript" src="resources/javascript/jquery.ba-postmessage.min.js"></script>
 
 <script type="text/javascript"
 	src="//maps.google.com/maps/api/js?v=3.10&sensor=false"></script>
