--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -368,7 +368,7 @@ h4 {
 }
 
 .resizableCol>.ui-resizable-e {
-	cursor: e-resize;
+	cursor: col-resize;
 	float: right;
 	height: 14px;
 	margin: 0 -9px 0 0;
