modifications to make login and logout more idiomatic in Spring Security.  Added parsing of http links that appear in attribute tables. fixed issue where cart button text would disappear after "cancel" in a dialog. Added code so that item is added to cart with successful login or item is previewed after successful login.  Restricted layers warning fixed.  Genericized UI.

--- a/geoportal_1/src/main/webapp/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/jspf/devincludes.jspf
@@ -8,6 +8,8 @@
 	type="text/css" />
 <link rel="stylesheet" type="text/css" media="print"
 	href="resources/css/print.css" />
+<link rel="stylesheet" href="resources/css/localize.css"
+	type="text/css" />
 <!--  <script type="text/javascript" src="resources/javascript/require.js"></script>-->
 <script
 	src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
