--- a/geoportal_1/src/main/webapp/jspf/header.jspf
+++ b/geoportal_1/src/main/webapp/jspf/header.jspf
@@ -1,7 +1,7 @@
 <div id="header">
 
 	<div id="logo" onclick="location.href=location.href">
-		<span>GeoData</span> <span class="offsetColor"> at Tufts</span>
+		<div id="logoGraphic"></div><div class="logoText">Open</div> <div class="logoText offsetColor">Geoportal</div>
 	</div>
 	<div id="top_menu">
 		<a href="">Reset</a> <span class="separator">|</span> <span
