--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/results.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/results.jspf
@@ -2,8 +2,8 @@
 <div id="resultsTableHeader" class="tableHeader">
 	<div id="sortDropdown">Sort Results</div>
 	<div id="columnDropdown">Columns</div>
-	<div id="mapClearButton" title="Clear all layers from the map">
-		Clear Views</div>
+	<button id="mapClearButton" title="Clear all layers from the map">
+		Clear Views</button>
 </div>
 <div id="searchResults">
 	<div id="searchResultsMessage" class="tableFooter"></div>
