--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -546,6 +546,9 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	outline: 0;
 	border-radius: 0;
 	z-index: 1500;
+	-moz-box-shadow: 0px 4px 6px -2px #888888;
+	-webkit-box-shadow: 0px 4px 6px -2px #888888;
+	box-shadow: 0px 4px 6px -2px #888888;
 }
 
 .ui-dialog.ui-corner-all {
