--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/devincludes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/devincludes.jspf
@@ -43,9 +43,8 @@
 <script type="text/javascript" src="resources/javascript/lib/utility.js"></script>
 <script type="text/javascript"
 	src="resources/javascript/lib/templates/template.js"></script>
+<script type="text/javascript" src="resources/javascript/lib/config.js"></script>
 <script type="text/javascript"
-	src="resources/javascript/lib/config.js"></script>
-	<script type="text/javascript"
 	src="resources/javascript/lib/analytics.js"></script>
 <script type="text/javascript"
 	src="resources/javascript/lib/commonControls.js"></script>
@@ -74,7 +73,12 @@
 <script type="text/javascript"
 	src="resources/javascript/lib/views/selectBoxes.js"></script>
 <script type="text/javascript"
-	src="resources/javascript/lib/views/miscViews.js"></script>
+	src="resources/javascript/lib/views/cart.js"></script>
+<script type="text/javascript"
+	src="resources/javascript/lib/views/leftPanel.js"></script>
+<script type="text/javascript"
+	src="resources/javascript/lib/views/tableRowSettings.js"></script>
+
 <script type="text/javascript"
 	src="resources/javascript/lib/views/search.js"></script>
 <script type="text/javascript"
