--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/header.jspf
@@ -4,10 +4,12 @@
 		<div id="logoGraphic"></div><div class="logoText">Open</div> <div class="logoText offsetColor">Geoportal</div>
 	</div>
 	<div id="top_menu">
-		<a href="">Reset</a> <span class="separator">|</span> <span
-			id="userGuideLink" class="infoLinks">Help</span> <span
-			class="separator">|</span> <span id="highlightsLink"
-			class="infoLinks">About</span> <span class="separator">|</span> <span
-			id="headerLogin" class="infoLinks login">Login</span>
+		<button class="reset button headerButton">Reset</button> 
+		<span class="separator">|</span> 
+		<button id="userGuideLink" class="infoLinks button headerButton">Help</button>
+		<span class="separator">|</span> 
+		<button id="highlightsLink" class="infoLinks button headerButton">About</button> 
+		<span class="separator">|</span> 
+		<button id="headerLogin" class="infoLinks login button headerButton">Login</button>
 	</div>
 </div>
