--- a/geoportal_1/src/main/webapp/resources/css/dataTable.css
+++ b/geoportal_1/src/main/webapp/resources/css/dataTable.css
@@ -145,6 +145,11 @@ table.display thead th {
 }
 
 /* text columns */
+.cellWrapper {
+	overflow: hidden;
+	word-break: break-all;
+}
+
 .colOriginator .cellWrapper {
 	margin-left: 2px;
 	margin-right: 2px;
@@ -194,7 +199,7 @@ table.display>tbody>tr>td {
 	border-color: #FFFFFF;
 	border-style: none solid solid;
 	border-width: 0 1px 1px;
-	white-space: nowrap;
+	/*white-space: nowrap;*/
 }
 
 table.display td.center {
