improved table resizing. added jquery ui images.  re-integrated wro4j javascript build.

--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -668,8 +668,7 @@ input.ui-button::-moz-focus-inner,button.ui-button::-moz-focus-inner {
 	padding: 0;
 	width: 100%;
 	/* support: IE10, see #8844 */
-	list-style-image:
-		url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
+	list-style-image: url('data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7');
 }
 
 .ui-menu .ui-menu-divider {
