--- a/geoportal_1/src/main/webapp/resources/css/print.css
+++ b/geoportal_1/src/main/webapp/resources/css/print.css
@@ -1,8 +1,8 @@
-@page {
-	size: landscape
-}
+@media print 
+{
 
 .page {
+	size: landscape;
 	-webkit-transform: rotate(-90deg);
 	-moz-transform: rotate(-90deg);
 	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
@@ -72,4 +72,5 @@ svg {
 
 .olControlMousePosition {
 	display: none;
+}
 }
