--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -1,36 +1,30 @@
-<link rel="stylesheet" href="resources/css/ogp.css" type="text/css" />
-<link rel="stylesheet" type="text/css" media="print"
-	href="resources/css/print.css" />
-<script type="text/javascript"
-	src="//maps.google.com/maps/api/js?v=3.10&amp;sensor=false"></script>
-<script type="text/javascript"
-	src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
-<script
-	src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
-<script
-	src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
-<!-- <script type="text/javascript" src="resources/javascript/DataTables/media/js/jquery.dataTables.min.js"></script>-->
-<script type="text/javascript"
-	src="resources/javascript/dataTables.scroller.min.js"></script>
-<script
-	src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-<script type="text/javascript"
-	src="resources/javascript/jquery.scrollTo-min.js"></script>
-<script type="text/javascript"
-	src="resources/javascript/jquery.ba-resize.js"></script>
-<script type="text/javascript" src="resources/javascript/panZoom.js"></script>
-<script type="text/javascript" src="resources/javascript/ogp.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+<script src="resources/javascript/dataTables.scroller.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="resources/javascript/jquery.scrollTo-min.js"></script>
+<script src="resources/javascript/spinners/spinners/spinners.min.js"></script>
+<!--  <script type="text/javascript" src="resources/javascript/jquery.ba-resize.js"></script>-->
+<script src="resources/javascript/jquery.ba-postmessage.min.js"></script>
+<script src="//maps.google.com/maps/api/js?v=3.10&sensor=false"></script>
+<script src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
+<script src="resources/javascript/panZoom.js"></script>
 
-<!-- <script type="text/javascript" src="javascript/testOverviewMap.js"></script>-->
-<!-- We should move to using a cdn where possible with a locally hosted fallback -->
-<!--
-<script type="text/javascript">
-var fallbackURL = "javascript/jquery/js/jquery-1.6.4.min.js";
-if (typeof jQuery == 'undefined') {
-    document.write("<script src=\"" + fallbackURL + "\" type = \"text/javascript\"></" + "script>");
-}
-</script>
--->
+
+<c:choose>
+      <c:when test="${dev}" >
+      <%@include file="devincludes.jspf"%>
+      </c:when>
+
+      <c:otherwise>
+      <link rel="stylesheet" href="resources/css/jquery-ui-ogpTheme.custom.css" type="text/css" />
+      <link rel="stylesheet" href="resources/css/ogp.css" type="text/css" />
+     
+      <script type="text/javascript" src="resources/javascript/ogp.js"></script>
+      </c:otherwise>
+</c:choose>
+
+
 
