reimplemented extent arrows as css, improved behavior. some refactoring of DynamicOgcController

--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -24,6 +24,42 @@
 	z-index: 1000;
 }
 
+#neCorner {
+    border-color: rgba(0, 0, 0, 0) #1D6EEF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+    border-width: 0 40px 40px 0;
+	right: 0px;
+}
+
+
+#seCorner {
+    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #1D6EEF rgba(0, 0, 0, 0);
+    border-width: 0 0 40px 40px;
+    bottom: 0;
+    right: 0;
+}
+
+
+#nwCorner {
+    border-color: #1D6EEF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+    border-width: 40px 40px 0 0;
+}
+
+#swCorner {
+    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #1D6EEF;
+    border-width: 40px 0 0 40px;
+    bottom: 0;
+}
+
+.corner {
+    border-style: solid;
+    height: 0;
+    margin: 5px;
+    position: absolute;
+    width: 0;
+    z-index: 1;
+    display: none;
+}
+
 #ogpMapButtons {
 	margin-right: 20px;
 	margin-top: 5px;
