--- a/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
+++ b/geoportal_1/src/main/webapp/resources/css/jquery-ui-ogpTheme.custom.css
@@ -225,6 +225,10 @@
 	z-index: 9999;
 }
 
+.ui-autocomplete-input.ui-corner-all {
+	border-radius: 0px;
+}
+
 .ui-button {
 	display: inline-block;
 	position: relative;
